fixed alignment of the login page

--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -6,7 +6,7 @@
   font-family: 'Arial', sans-serif;
   margin: 0;
   padding: 0;
-  margin-left: 190px;
+  margin-left: 0px;
   justify-content: center;
   align-items: center;
 }
